--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="https://twitter.com/akeaswaran">Twitter</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="https://github.com/akeaswaran/akeaswaran.github.io">GitHub project</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }} - a work in progress!</span>
   </nav>
 
