--- a/blog/_includes/head.html
+++ b/blog/_includes/head.html
@@ -43,7 +43,7 @@
 	<section>
 	  <ul class="links">
 	    <li>
-		    <a href="/acknowledgement">
+		    <a href="/blog/acknowledgement">
 				  <h3>Acknowledgement</h3>
 				  <p>Acknowledgement</p>
 				</a>
