--- a/blog/_includes/about.html
+++ b/blog/_includes/about.html
@@ -2,6 +2,6 @@
   <h2>About</h2>
 	<p>{{ site.description }}</p>
 	<ul class="actions">
-	  <li><a href="/about" class="button">Learn More</a></li>
+	  <li><a href="/blog/about" class="button">Learn More</a></li>
 	</ul>
 </section>
