--- a/blog/_includes/postlist.html
+++ b/blog/_includes/postlist.html
@@ -7,7 +7,7 @@
 												<h3><a href="#">Lorem ipsum fermentum ut nisl vitae</a></h3>
 												<time class="published" datetime="2015-10-20">October 20, 2015</time>
 											</header>
-											<a href="#" class="image"><img src="/images/pic08.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="/blog/images/pic08.jpg" alt="" /></a>
 										</article>
 									</li>
 									<li>
@@ -16,7 +16,7 @@
 												<h3><a href="#">Convallis maximus nisl mattis nunc id lorem</a></h3>
 												<time class="published" datetime="2015-10-15">October 15, 2015</time>
 											</header>
-											<a href="#" class="image"><img src="/images/pic09.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="/blog/images/pic09.jpg" alt="" /></a>
 										</article>
 									</li>
 									<li>
@@ -25,7 +25,7 @@
 												<h3><a href="#">Euismod amet placerat vivamus porttitor</a></h3>
 												<time class="published" datetime="2015-10-10">October 10, 2015</time>
 											</header>
-											<a href="#" class="image"><img src="/images/pic10.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="/blog/images/pic10.jpg" alt="" /></a>
 										</article>
 									</li>
 									<li>
@@ -34,7 +34,7 @@
 												<h3><a href="#">Magna enim accumsan tortor cursus ultricies</a></h3>
 												<time class="published" datetime="2015-10-08">October 8, 2015</time>
 											</header>
-											<a href="#" class="image"><img src="/images/pic11.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="/blog/images/pic11.jpg" alt="" /></a>
 										</article>
 									</li>
 									<li>
@@ -43,7 +43,7 @@
 												<h3><a href="#">Congue ullam corper lorem ipsum dolor</a></h3>
 												<time class="published" datetime="2015-10-06">October 7, 2015</time>
 											</header>
-											<a href="#" class="image"><img src="/images/pic12.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="/blog/images/pic12.jpg" alt="" /></a>
 										</article>
 									</li>
 								</ul>
