--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -45,7 +45,7 @@ p {
 }
 
 a {
-    color: #42dca3;
+    color: #E7AF26;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -294,17 +294,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #42dca3;
-    color: #42dca3;
+    border: 1px solid #E7AF26;
+    color: #E7AF26;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #42dca3;
+    border: 1px solid #E7AF26;
     outline: 0;
     color: #000;
-    background-color: #42dca3;
+    background-color: #E7AF26;
 }
 
 ul.banner-social-buttons {
