--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     {{ content }}
   </section>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/jquery-3.1.1.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
