update for right colors and reck club

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ nav.main-nav a {
 	top: 8px;
 	right: 6px;
 	padding: 8px 12px;
-	color: #eeb211;
+	color: #BBA071;
 	font-size: 13px;
 	/*font-weight: bold;*/
 	line-height: 1.35;
@@ -133,17 +133,17 @@ nav.main-nav a {
 }
 
 nav.main-nav a:hover {
-	color: #f5d376
+	color: #EBC98E
 }
 
 nav.main-nav a.cta {
-	background: #eeb211;
+	background: #BBA071;
 	color: #fff;
 	margin-left: 12px;
 }
 
 nav.main-nav a.cta:hover {
-	background: #f5d376
+	background: #EBC98E
 }
 
 a.download-button {
@@ -154,27 +154,27 @@ a.download-button {
 	/*font-weight: bold;*/
 	line-height: 1.35;
 	border-radius: 3px;
-	background: #eeb211;
+	background: #BBA071;
 	color: #fff;
 	margin-left: 12px;
 }
 
 a.download-button:hover {
 	color: #fff;
-	background: #f5d376;
+	background: #EBC98E;
 }
 
 a.big-download-button {
 	top: 8px;
 	right: 6px;
 	padding: 15px 15px;
-	color: #eeb211;
+	color: #BBA071;
 	font-size: 35px;
 	margin-left: 12px;
 }
 
 a.big-download-button:hover {
-	color: #f5d376
+	color: #EBC98E
 }
 
 #wrapper {
@@ -204,10 +204,10 @@ a,
 #post-list li:hover .dates,
 #title:hover {
 	text-decoration: none;
-	color: #eeb211;
+	color: #BBA071;
 }
 
-p a:hover { color: #f5d376; }
+p a:hover { color: #EBC98E; }
 
 /*Transitions*/
 a,
@@ -461,9 +461,9 @@ Post List
 }
 
 #archive-link:hover {
-	background: #f5d376;
+	background: #EBC98E;
 	color: #fff;
-	box-shadow: 0 0 0 1px #f5d376;
+	box-shadow: 0 0 0 1px #EBC98E;
 }
 
 #archive-link span {
@@ -618,7 +618,7 @@ h2.month {
 }
 
 #archive-list li a:hover,#archive-list li:hover .dates {
-	color: #f5d376;
+	color: #EBC98E;
 }
 
 #post-meta img.avatar {
@@ -639,7 +639,7 @@ h2.month {
 
 #post-list.archive.readmore a{
 	font: 400 16px/1.6 "Helvetica Neue",helvetica,Arial,sans-serif;
-	color: #f5d376;
+	color: #EBC98E;
 }
 
 #post-list.archive.readmore a:hover{
@@ -728,5 +728,5 @@ height: 100%;
 }
 
 #nav ul li a:hover {
-	color: #f5d376
+	color: #EBC98E
 }
