--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,14 @@
   <script src="{{ site.baseurl }}/assets/js/jquery-3.1.1.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <script>hljs.initHighlightingOnLoad();</script>
-
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+     "HTML-CSS": { linebreaks: { automatic: true } },
+             SVG: { linebreaks: { automatic: true } }
+    });
+  </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
