--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,9 @@ archive: true
 <article class="post">
     <header>
         <h1>{{ page.title }}</h1>
+        {% if page.date %}
         <h2 class="headline">{{ page.date | date:"%B %-d, %Y" }}</h2>
+        {% endif %}
     </header>
     <section id="post-body">
         {{content}}
