--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,12 +24,13 @@
     <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/assets/images/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="{{ site.baseurl }}/assets/images/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#eeb211">
+    <meta name="msapplication-TileColor" content="#BBA071">
     <meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#eeb211">
+    <meta name="theme-color" content="#BBA071">
   <link href="{{ site.baseurl }}/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-  <link rel="alternate" type="application/rss+xml" title="Blog - Akshay Easwaran" href="{{ site.baseurl }}/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Blog | Akshay Easwaran" href="{{ site.baseurl }}/feed.xml">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/highlight.css">
 </head>
 <body>
@@ -45,16 +46,18 @@
   </section>
 
   <script src="{{ site.baseurl }}/assets/js/jquery-3.1.1.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
-     "HTML-CSS": { linebreaks: { automatic: true } },
-             SVG: { linebreaks: { automatic: true } }
+        CommonHTML: { linebreaks: { automatic: true } },
+        "HTML-CSS": { linebreaks: { automatic: true } },
+         SVG: { linebreaks: { automatic: true } }
     });
   </script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
