--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,13 @@
   <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/reading-time.js"></script>
+  {% if page.path contains '_posts' %}
+  <script>
+  var stats = readingTime("{{ content | strip_html | strip_newlines }}");
+  $('.headline').html($('.headline').html() + ' - ' + stats.text);
+  </script>
+  {% endif %}
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         CommonHTML: { linebreaks: { automatic: true } },
