site redesign for 2018 woo paper theme

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,17 @@
 <nav class="main-nav">
-    {% if page.url != "/" %}
-        <a href="{{ site.baseurl }}/"> <span class="arrow">←</span> Home </a>
-    {% endif %}
+    <div class="row float-right" style="display:table; float:right;">
+        {% if page.url != "/" %}
+            <a href="{{ site.baseurl }}/">Home</a>
+        {% endif %}
 
-    {% if page.url != "/about/" %}
-        <a href="{{ site.baseurl }}/about">About </a>
-    {% endif %}
-    <a class="cta" href="{{ site.baseurl }}/feed.xml">Subscribe</a>
+        {% if page.url != "/about/" %}
+            <a href="{{ site.baseurl }}/about">About</a>
+        {% endif %}
+
+        {% if page.url != "/projects/" %}
+            <a href="{{ site.baseurl }}/projects">Projects</a>
+        {% endif %}
+
+        <a class="cta" href="{{ site.baseurl }}/feed.xml">Subscribe</a>
+    </div>
 </nav>
