--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,78 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript">
-      var host = "akeaswaran.me";
-      if ((host == window.location.host) && (window.location.protocol != "https:"))
-          window.location.protocol = "https";
-    </script>
-    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/assets/images/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/assets/images/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="{{ site.baseurl }}/assets/images/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#BBA071">
-    <meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#BBA071">
-  <link href="{{ site.baseurl }}/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-  <link rel="alternate" type="application/rss+xml" title="Blog | Akshay Easwaran" href="{{ site.baseurl }}/feed.xml">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/highlight.css">
-</head>
+<html>
+{% include head.html %}
 <body>
-
-  {% include navigation.html %}
-
-  {% if page.profile %}
-      {% include profile.html %}
-  {% endif %}
-
-  <section id="wrapper" class="{% if page.profile %}home{% endif %}">
-    {{ content }}
-  </section>
-
-  <script src="{{ site.baseurl }}/assets/js/jquery-3.1.1.min.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/main.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/reading-time.js"></script>
-  {% if page.path contains '_posts' %}
-  <script>
-  var stats = readingTime("{{ content | strip_html | strip_newlines }}");
-  $('.headline').html($('.headline').html() + ' | ' + stats.text);
-  </script>
-  {% endif %}
-  <script type="text/x-mathjax-config">
+    {% include navigation.html %}
+    <main class="u-container">
+        {{ content }}
+    </main>
+    <script src="{{ site.baseurl }}/assets/js/jquery-3.1.1.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
+    <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         CommonHTML: { linebreaks: { automatic: true } },
         "HTML-CSS": { linebreaks: { automatic: true } },
-         SVG: { linebreaks: { automatic: true } }
+        SVG: { linebreaks: { automatic: true } }
     });
-  </script>
-  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', '{{ site.google_analytics }}', 'auto');
-    ga('send', 'pageview');
-  </script>
+    </script>
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
 </body>
 </html>
