--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -24,6 +24,7 @@ a.big-download-button {
 	padding: 12px 12px;
 	font-size: 35px;
 	text-align: center;
+	border-radius: 3px;
 }
 
 a.big-download-button:hover {
