--- a/_sass/helpers/_variables.scss
+++ b/_sass/helpers/_variables.scss
@@ -12,7 +12,7 @@ $c-base__2: #EDE7D6;
 $c-base__3: #FCF5E4;
 
 $c-accent__blue: #B3A369;
-$c-accent__darkblue: #D5C27D;
+$c-accent__darkblue: #B3A369;
 $c-accent__green: #032B55;
 
 // Breakpoints
