--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript">
-    var host = "akeaswaran.me";
-    if ((host == window.location.host) && (window.location.protocol != "https:"))
-    window.location.protocol = "https";
+//     var host = "akeaswaran.me";
+//     if ((host == window.location.host) && (window.location.protocol != "https:"))
+//     window.location.protocol = "https";
     </script>
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
     <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-57x57.png">
