--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="c-page__footer">
-    <p class="small" style="text-align: center;margin: 0 auto;color:#AAAAAA;">&copy; {{ site.time | date: '%Y' }} {{ site.author }}</p>
+    <p class="small" style="text-align: center;margin: 0 auto;">&copy; {{ site.time | date: '%Y' }} {{ site.author }}</p>
 </footer>
