--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             <div style="text-align:center;margin-top: 20px;">
                 <ul>
                     <li style="display:inline-block;">
-                        <a class="big-download-button" href="mailto:akeaswaran@gatech.edu">
+                        <a class="big-download-button" href="mailto:akeaswaran@me.com">
                             <i class="fa fa-envelope-o"></i>
                         </a>
                     </li>
