added some EqPPP stuff and fixed bullets on dark mode

--- a/_sass/utilities/_dark-mode.scss
+++ b/_sass/utilities/_dark-mode.scss
@@ -39,7 +39,7 @@
         color: #555555
     }
 
-    .c-article__main p, ul, .c-article__main strong {
+    .c-article__main p, ul, ol, .c-article__main strong {
         color: #888;
     }
 
