add podcast appearances

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,6 +12,10 @@
             <a href="{{ site.baseurl }}/projects">Projects</a>
         {% endif %}
 
+        {% if page.url != "/podcasts/" %}
+            <a href="{{ site.baseurl }}/podcasts">Podcasts</a>
+        {% endif %}
+
         <a class="cta" href="{{ site.baseurl }}/feed.xml">Subscribe</a>
     </div>
 </nav>
