--- a/_sass/components/_archives.scss
+++ b/_sass/components/_archives.scss
@@ -24,7 +24,7 @@
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
-        display: flex;
+        display: block;
         -webkit-flex-wrap: wrap;
             -ms-flex-wrap: wrap;
                 flex-wrap: wrap;
